[package]
name = "price-chart"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "insert-data"
path = "src/bin/insert_data.rs"

[dependencies]
axum = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite",  "time" ] }
csv = "1.3.0"
time = { version = "0.3.31", features = ["serde"] }

